Add 'dev' branch to CI/CD pipeline trigger for improved deployment flexibility

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -2,7 +2,7 @@ name: Multi-Environment CI/CD Pipeline
 
 on:
   push:
-    branches: [main]
+    branches: [main, dev]
     paths:
       - 'apps/**'
       - 'environments/**'
