Add comment to clarify branch trigger in CI/CD pipeline

--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -2,7 +2,7 @@ name: Multi-Environment CI/CD Pipeline
 
 on:
   push:
-    branches: [main, dev]
+    branches: [main, dev] # Trigger on both main and dev branches
     paths:
       - 'apps/**'
       - 'environments/**'
