--- a/apps/webapp/configmap.yaml
+++ b/apps/webapp/configmap.yaml
@@ -1,11 +1,16 @@
+# Base ConfigMap for the webapp application
+# This stores configuration data as key-value pairs that can be consumed by pods
+# ConfigMaps decouple configuration from application code, making apps more portable
+
 apiVersion: v1
 kind: ConfigMap
 metadata:
   name: webapp-config
   labels:
-  app: webapp
+    app: webapp  # Label to identify this ConfigMap as part of the webapp application
 data:
-  ENVIRONMENT: "base"
-  VERSION: "1.0.0"
-  LOG_LEVEL: "info"
-  FEATURE_FLAG_NEW_UI: "false"
+  # Base configuration values that will be overridden by environment-specific kustomizations
+  ENVIRONMENT: "base"              # Indicates this is the base environment configuration
+  VERSION: "1.0.0"                 # Application version - will be overridden per environment
+  LOG_LEVEL: "info"                # Default logging level - can be debug, info, warn, error
+  FEATURE_FLAG_NEW_UI: "false"     # Feature flag to control new UI visibility
