--- a/environments/prod/kustomization.yaml
+++ b/environments/prod/kustomization.yaml
@@ -1,30 +1,41 @@
+# Production Environment Kustomization
+# This overlay customizes the base webapp configuration for the production environment
+# Production environment serves live traffic and requires high availability and performance
+
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+# Deploy all resources to the 'prod' namespace for production isolation
 namespace: prod
 
+# Add 'prod-' prefix to all resource names to avoid naming conflicts
 namePrefix: prod-
 
+# Labels applied to all resources in this environment
 commonLabels:
-  environment: production
-  team: platform
+  environment: production  # Identifies this as the production environment
+  team: platform           # Indicates which team owns these resources
 
+# Reference to the base application configuration
 bases:
-  - ../../apps/webapp
+  - ../../apps/webapp      # Path to the base webapp kustomization
 
+# Generate/modify ConfigMap with production-specific configuration
 configMapGenerator:
   - name: webapp-config
-    behavior: merge
-    literals:
-      - ENVIRONMENT=production
-      - VERSION=1.0.0
-      - LOG_LEVEL=warn
-      - FEATURE_FLAG_NEW_UI=true
+    behavior: merge                # Merge with existing ConfigMap from base
+    literals:                      # Production-specific configuration values
+      - ENVIRONMENT=production     # Set environment to production
+      - VERSION=1.0.0             # Use stable production version
+      - LOG_LEVEL=warn            # Reduced logging for performance (warn and error only)
+      - FEATURE_FLAG_NEW_UI=true  # Enable validated features in production
 
+# Set replica count for production environment
 replicas:
   - name: webapp
-    count: 3
+    count: 3           # Three replicas for high availability and load distribution
 
+# Customize container images for production
 images:
   - name: nginxdemos/hello
-    newTag: latest
+    newTag: latest     # Use production-ready image tag (should be a specific version in real scenarios)
